// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test Button title renders correctly with props 1`] = `
<div>
  subscribe
</div>
`;

exports[`Button component test Button title renders correctly without props 1`] = `
<div>
  Button
</div>
`;
